prevent filters from being cut off after 700px

--- a/hubgrep/frontend_blueprint/templates/components/collapsible/_collapsible.scss
+++ b/hubgrep/frontend_blueprint/templates/components/collapsible/_collapsible.scss
@@ -50,11 +50,14 @@
   .collapsible-content {
     max-height: 0;
     overflow: hidden;
-    transition: max-height .25s ease-in-out;
+    transition: max-height .15s ease-in-out;
   }
 
   .toggle:checked + .lbl-toggle + .collapsible-content {
-    max-height: 700px; // we need a specific height for transition to take effect
+    // we need a specific height for transition to take effect
+    // the downside is that if content needs more height, it gets cut off after this value!
+    // adjust accordingly, and expect the animation to speed up for higher values
+    max-height: 2000px;
   }
 
   .toggle:checked + .lbl-toggle {
